# Chess

./: .gitignore  .gitmodules  Makefile  README.md  export_model.py  requirements.txt
cpp/: CMakeLists.txt
cpp/src/: chess.cpp  chess.h  inference.cpp  inference.h  main.cpp  mcts.cpp  mcts.h
src/models/: alphazero.py  supervised_baseline.py  tune_supervised.py
src/rl/: action_encoding.py  chess_env.py  encoders.py  parallel_mcts.py  self_play.py  self_play_mcts.py  self_play_rl.py  verify_env.py
src/web/: app.py
src/web/static/: index.html
